# fc-rom-vomitter

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_JA.md  SECURITY.md
.github/workflows/: validate.yml
LICENSES/: README.md
docs/: architecture.md  bring-up.md  licensing.md  manufacturing.md
experimental/nes/: README.md
firmware/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/host_tests/: CMakeLists.txt  test_firmware_core.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_pins.h  console_power.c  console_power.h  controller.c  controller.h  ines.c  ines.h  rom_slot.c  rom_slot.h  rom_store.c  rom_store.h  sram_bus.c  sram_bus.h  status_led.c  status_led.h  web_server.c
hardware/: README.md  fp-lib-table  nescart-fc.kicad_pcb  nescart-fc.kicad_pro  nescart-fc.kicad_sch  nescart-fc.kicad_sym  nescart-fc_bus_core.kicad_sch  nescart-fc_decoupling.kicad_sch  nescart-fc_loader.kicad_sch  nescart-fc_power_safe.kicad_sch  sym-lib-table
hardware/assets/: rom-vomitter-mascot.prompt.md
hardware/docs/: DESIGN-CONSTRAINTS.md  cpl-overrides.csv  layout-electrical-guidance.md  pinout-fc.md  sourcing-lock.csv
hardware/nescart-fc.3dshapes/: README.md
hardware/nescart-fc.pretty/: cartridge_edge_60.kicad_mod  rom_vomitter_logo.kicad_mod
hardware/tools/: apply_rom_vomitter_silk.py  audit_jlcpcb_cpl.py  build_jlcpcb_assembly_files.py  drc_classified.py  fc_geometry.py  gen_edge_footprint.py  gen_sch.py  sexp.py  (+4 more)
scripts/: make_release_manifest.py  verify_repository.py
(+26 files in other folders)
